test/strongUpdates2.slq
def main(){
	x:=1;
	x/=2;
	y:=vector(3,0);
	y[0]=x; // error
}
